<resources>
    <string name="app_name">Ali y sus Aventuras en Portu</string>
    <string name="app_version" translatable="false">v0.0.1</string>
    <string name="google_maps_key" templatedMergeStrategy="preserve" translatable="false">AIzaSyAMQRbm_8waZsz6gfwkKwkWiVvUOz3_-FY</string>
    <string name="jugar">JUGAR</string>
    <string name="actividad_1">Actividad 1</string>
    <string name="actividad_2">Actividad 2</string>
    <string name="actividad_3">Actividad 3</string>
    <string name="actividad_4">Actividad 4</string>
    <string name="actividad_5">Actividad 5</string>
    <string name="actividad_6">Actividad 6</string>
    <string name="actividad_7">Actividad 7</string>
    <string name="nombre">"Nombre"</string>
    <string name="contraseña">Contraseña</string>
    <string name="continuar">Continuar</string>
    <string name="siguiente">Siguiente</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="invitado">Invitado</string>
    <string name="repetir">Repetir</string>
    <string name="actividad">Actividad</string>
    <string name="quequiereshacer">¿Qué quires hacer?</string>
    <string name="vacio" translatable="false"></string>
    <string name="incorrecto" translatable="false">Incorrecto</string>
    <string name="titulo_actividad_1" translatable="false">Basilica Santa Maria</string>
    <string name="titulo_actividad_2" translatable="false">Plaza San Roque</string>
    <string name="titulo_actividad_3" translatable="false">Torre Salazar</string>
    <string name="titulo_actividad_4" translatable="false">Mercado</string>
    <string name="titulo_actividad_5" translatable="false">Casco Viejo</string>
    <string name="titulo_actividad_6" translatable="false">Zunzunegui</string>
    <string name="titulo_actividad_7" translatable="false">Puente Colgante</string>
    <string name="error" translatable="false">ERROR</string>
    <string name="motivo_error1">Antes debes finalizar la anterior Actividad</string>
    <string name="motivo_error2">Estas fuera del rango de los 50 metros!!</string>
    <string name="datos_guardados">Datos guardados</string>
    <string name="continuar_partida_guardad">¿Quieres continuar la partida guardada?</string>
    <string name="progreso">Progreso</string>
    <string name="nueva_partida">Nueva partida</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="quieres_cerrar_sesion">¿Quieres cerrar sesión?</string>
    <string name="cambiar_tema">Cambiar Tema</string>
    <string name="quieres_cambiar_tema">¿Quieres cambiar tema?</string>
    <string name="cual_es_tu_nombre">¿CUAL ES TU NOMBRE?</string>
    <string name="Modos"><u>Información de los modos</u></string>
    <string name="modo_guiado">MODO GUIADO</string>
    <string name="modo_libre">MODO LIBRE</string>
    <string name="modo_profesor">MODO PROFESOR</string>
    <string name="info_modo_guiado">Este trata de jugar siguiendo una ruta definida. Solo se podrá jugar el punto que esté activado y para acceder a él tendremos que estar al menos a 50m del lugar.
                               La partida se guardará en el último punto al que juguemos.</string>
    <string name="info_modo_libre"> Este trata de jugar en el orden que queramos, la única condición para acceder a ellos es estar a menos de 50m del lugar.
                               Estas partidas no serán guardadas, por lo cual el progreso se perderá.</string>
    <string name="info_modo_profesor"> El modo profesor/a se distingue de los otros modos por no tener la restricción de los 50m para iniciar un juego y poder acceder a ellos por elección propia.</string>
    <string name="open_nav">Abrir</string>
    <string name="close_nav">Cerrar</string>
    <string name="nav_mapa">Mapa</string>
    <string name="nav_profesor">Modo profesor</string>
    <string name="nav_tema">Cambiar Tema</string>
    <string name="nav_idioma">Cambiar idioma</string>
    <string name="nav_informacion">Acerca De</string>
    <string name="nav_desconectar">Desconectar</string>
    <string name="nav_home">Salir al Menu</string>
    <string name="nav_logout">Cerrar sesión</string>
    <string name="salir">Salir</string>
    <string name="seguro_salir">¿Quieres salir de la aplicación?</string>
    <string name="seguro_salir_home">¿Quieres salir al menu de inicio?</string>
    <string name="titulo_cambiar_idioma" >Cambiar Idioma</string>
    <string name="seguro_cambiar_idioma">¿Quieres cambiar el idioma a <b>EUSKERA</b>?</string>
    <string name="descripcion">Esta aplicación ha sido desarrollada por alumnos de la Universidad del País Vasco y de CIFP Txurdinaga con el fin de ayudar a los profesores de E.P y a sus alumnas y alumnos a conocer Portugalete mediante juegos didácticos de manera que aprendan divirtiéndose.</string>
    <string name="acerca_desa">"Desarrolladores"</string>
    <string name="acerca_desa_nombres" translatable="false">"Martín Caño, Javier Andia, Lorea Hernandez y Noemí Márquez."\n</string>
    <string name="acerca_dise">"Diseñadores"</string>
    <string name="acerca_dise_nombres" translatable="false">"Haizea Ruiz, Oihane Vaamonde y Eider Vallejo."\n</string>
    <string name="username">"Usuario"</string>
    <string name="password">"Contraseña"</string>
    <string name="dialogo0_1" translatable="false">¡Hola! Me llamo Ali y soy agente espacial.</string>
    <string name="dialogo0_2" translatable="false">Y tú, ¿Cómo te llamas?</string>
    <string name="dialogo0_3" translatable="false">El rey de la galaxia me ha encargado una misión y para ello, tengo que llegar a Getxo.</string>
    <string name="dialogo0_4" translatable="false">Me han dicho que es un pueblo pequeño en la costa del País Vasco, pero no sé nada más. ¿Me ayudáis a llegar?</string>
    <string name="dialogo0_5" translatable="false">¡Venga, montaos en mi nave!</string>
    <string name="dialogo1_1" translatable="false">Vaya… Parece que se me ha roto la nave… ¿Qué hacemos ahora? ¿Cómo voy a llegar a Getxo?</string>
    <string name="dialogo1_2" translatable="false">Toma, puedes usar este mapa.</string>
    <string name="dialogo1_3" translatable="false">Pero… ¿Quién eres tú? ¿De dónde has salido?</string>
    <string name="dialogo1_4" translatable="false">Me llamo María Díaz de Haro, pero también me conocen como Señora de Vizcaya, y hace exactamente 700 años fundé este pueblo en el que has aterrizado, Portugalete.</string>
    <string name="dialogo1_5" translatable="false">¡Ala! ¿En serio? ¿Y este mapa que me has dado, me ayudará a llegar a mi destino?</string>
    <string name="dialogo1_6" translatable="false">Si, pero me temo que no va a ser tan fácil. He marcado varios puntos en este mapa, y en cada uno podrás ganar una pista. Cuando consigas todas, descubrirás cómo llegar.</string>
    <string name="dialogo1_7" translatable="false">¡Genial! ¿Por dónde empiezo?</string>
    <string name="dialogo1_8" translatable="false">Puedes empezar por aquí, haz click en los elementos y encuentra la contraseña:</string>
    <string name="dialogo2_1" translatable="false">Creo que he llegado a la segunda parada de la ruta. ¿Será esta la Plaza San Roque?</string>
    <string name="dialogo2_2" translatable="false">Oh, buenos días viajero. Veo que estás siguiendo el famoso mapa de María Díaz de Haro para llegar hasta Getxo. ¿Es eso cierto?</string>
    <string name="dialogo2_3" translatable="false">Si, así es. Y tú. ¿Quién eres?</string>
    <string name="dialogo2_4" translatable="false">Me llamo San Roque, como la plaza en la que te encuentras, y soy el protagonista de las fiestas patronales de Portugalete.</string>
    <string name="dialogo2_5" translatable="false">Nací en el siglo XIII, y era hijo de uno de los más importantes caballeros del rey. A los 20 años, decidí viajar a Roma.</string>
    <string name="dialogo2_6" translatable="false">Y en el camino ayudé a mucha gente que había enfermado por la peste negra.</string>
    <string name="dialogo2_7" translatable="false">Es por ello que gracias a mis cuidados y ayudas las personas me tienen un gran aprecio y construyeron ermitas y de más en mi nombre.</string>
    <string name="dialogo2_8" translatable="false">Así hasta el día de hoy, en el que hay una fiesta en mi honor.</string>
    <string name="dialogo2_9" translatable="false">Y esa fiesta, ¿cuándo se celebra?</string>
    <string name="dialogo2_10" translatable="false">Escucha atentamente. Ahora te informaré sobre mis fiestas patronales, y si estás atento, encontrarás la palabra que tenga 4 vocales.</string>
    <string name="dialogo3_1" translatable="false">¡¡Hola!! Tú debes ser el alien que está realizando la ruta a Getxo, ¿no es eso cierto?</string>
    <string name="dialogo3_2" translatable="false">Sí. Pero ¿Cómo te llamas?</string>
    <string name="dialogo3_3" translatable="false">Me llamo Lope García de Salazar, y este castillo que ves detrás de mí lo construyó mi padre, Ochoa García de Salazar en 1379.</string>
    <string name="dialogo3_4" translatable="false">Yo lo heredé cuando él murió. Seguro que has oído hablar de mi, el famoso cronista que luchó con valentía contras sus enemigos en las tierras de Bizkaia.</string>
    <string name="dialogo3_5" translatable="false">La verdad que no, pero ¿y si me cuentas más y así consigo la pieza del puzzle que necesito para llegar al final?</string>
    <string name="dialogo3_6" translatable="false">Está bien. Escucha atentamente y conseguirás las pistas necesarias para completar la prueba que te dará esa pieza. Un consejo: fijate bien en los número que no deberían estar en el texto.</string>
    <string name="dialogo4_1" translatable="false">Ufff, qué viaje tan movidito.</string>
    <string name="dialogo4_2" translatable="false">¡Pero si solo es la 4º parada!</string>
    <string name="dialogo4_3" translatable="false">Ui, y tú…¿quién eres?</string>
    <string name="dialogo4_4" translatable="false">Me llamo la Virgen de la Guía, y soy la encargada de ayudarte a conseguir la 4º pieza del puzzle final.</string>
    <string name="dialogo4_5" translatable="false">¿La Virgen de la Guía?</string>
    <string name="dialogo4_6" translatable="false">¡Pues claro! ¿Es que no has oído hablar de mi? Verás, soy la protagonista de una de las fiestas más esperadas por todos los habitantes de Portugalete.</string>
    <string name="dialogo4_7" translatable="false">Y, esas fiestas, ¿cuándo son?</string>
    <string name="dialogo4_8" translatable="false">Atento Ali. Necesitarás tener los ojos y los oídos bien abiertos para encontrar las pistas que te llevarán a esa preciada pieza de puzzle.</string>
    <string name="dialogo5_1" translatable="false">¡Que rápido has llegado!</string>
    <string name="dialogo5_2" translatable="false">¡Qué susto! Todavía no me acostumbro… ¿Cómo te llamas?</string>
    <string name="dialogo5_3" translatable="false">Me llamo Víctor Chávarri, y se puede decir que me conocen por mis negocios y contribuciones a la metalurgia y construcciones de Vizcaya.</string>
    <string name="dialogo5_4" translatable="false">¿Metalurgia? ¿Qué es eso?</string>
    <string name="dialogo5_5" translatable="false">La metalurgia… es extraer metales a partir de minerales. Pero la siguiente prueba no va sobre eso. ¿Sabéis donde estamos?</string>
    <string name="dialogo5_6" translatable="false">Parecen calles antiguas.</string>
    <string name="dialogo5_7" translatable="false">Eso es, estamos en el Casco Viejo de Portugalete. Si pinchas en los siguientes elementos, podrás aprender un poco más sobre esta zona tan importante.</string>
    <string name="dialogo5_8" translatable="false">Presta mucha atención para poder responder a la pregunta final. ¡Suerte!</string>
    <string name="dialogo6_1" translatable="false">Estoy muy muy cansado, no sé cuántas paradas me quedan todavía…</string>
</resources>