<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentInformacion">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="155dp"
            android:layout_height="155dp"
            android:layout_marginTop="24dp"
            app:cardCornerRadius="250dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:backgroundTint="@color/azulosc"
            >

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="250dp">

                <ImageView
                    android:layout_width="154dp"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_logo" />

            </androidx.cardview.widget.CardView>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/appnameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintVertical_bias="0.01999998" />

        <TextView
            android:id="@+id/versionTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_version"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/appnameTV"
            app:layout_constraintStart_toStartOf="@+id/appnameTV"
            app:layout_constraintTop_toBottomOf="@+id/appnameTV"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/desarrolladoresTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/acerca_desa"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/versionTV"
            app:layout_constraintStart_toStartOf="@+id/versionTV"
            app:layout_constraintTop_toBottomOf="@+id/versionTV" />

        <TextView
            android:id="@+id/desaTV"
            android:layout_width="300dp"
            android:layout_height="47dp"
            android:layout_marginTop="8dp"
            android:text="@string/acerca_desa_nombres"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/desarrolladoresTV"
            app:layout_constraintHorizontal_bias="0.484"
            app:layout_constraintStart_toStartOf="@+id/desarrolladoresTV"
            app:layout_constraintTop_toBottomOf="@+id/desarrolladoresTV"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/designersTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/acerca_dise"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/desaTV"
            app:layout_constraintHorizontal_bias="0.481"
            app:layout_constraintStart_toStartOf="@+id/desaTV"
            app:layout_constraintTop_toBottomOf="@+id/desaTV" />

        <TextView
            android:id="@+id/desigTV"
            android:layout_width="308dp"
            android:layout_height="62dp"
            android:layout_marginTop="8dp"
            android:text="@string/acerca_dise_nombres"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/designersTV"
            app:layout_constraintStart_toStartOf="@+id/designersTV"
            app:layout_constraintTop_toBottomOf="@+id/designersTV" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>